@@ -1,30 +1,29 @@
 # Overview
-1. TODO
+1. How to use swing debugging tools
 
 
 --------
 # [SwingExplorer](https://github.com/swingexplorer/swingexplorer)
+1. add to `build.gradle.kts`: `implementation("org.swingexplorer:swingexplorer-core")`
+1. Find path of javaassist jar
+1. Find path of swingexplorer agent jar
+1. See [runner script](../bash/examples/jvm/run_with_swingexplorer.sh)
 
-1. Clone repo
-```bash
-mkdir -p $HOME/git-repos/external;
-cd $HOME/git-repos/external;
-git clone https://github.com/swingexplorer/swingexplorer.git
-cd swingexplorer/src/dist-files/bin
-ln -sv $(readlink -f ./swexpl) $HOME/bin/
-```
-1. See [command line args](https://github.com/swingexplorer/swingexplorer/blob/7539add39b8b6741f59baab87a4034778c782113/src/dist-files/bin/swexpl)
-1. Make a gradle task:
-```kts
-
-```
+## Extras
 1. See also [git repo](https://github.com/swingexplorer/swingexplorer/tree/master)
 1. See also [maven repo](https://mvnrepository.com/artifact/org.swingexplorer/swingexplorer-core/1.7.0)
 1. See also: [Jetbrains plugin](https://plugins.jetbrains.com/plugin/8385-swingexplorer-integration-v2) (I don't know how to use)
 
 
+
+--------
+# [JSpy](https://github.com/nokia/jspy)
+1. ... TODO: no maven artifact :-(
+
+
 --------
 # [SwingSpy](https://github.com/igr/swingspy)
+1. TODO: module stuff: --add-opens java.desktop/javax.swing=ALL-UNNAMED
 
 ## Download
 1. [Download jar from maven](https://mvnrepository.com/artifact/org.jodd/jodd-swingspy/3.9)
@@ -37,7 +36,6 @@ ln -sv $(readlink -f ./swexpl) $HOME/bin/
         System.err.println("SwingSpy is not installed... " + ex);
     }
 ```
-1. TODO: module stuff: opens java.desktop/javax.swing=ALL-UNNAMED
 1. Run the app
 1. CTRL + SHIFT + Click
 
